# NKUC-homework1.0

./: .gitignore  CGame.sln  CGame.vcxproj  CGame.vcxproj.filters  README.md  build.bat  crop_lawn.py  test_audio.cpp
CGame/x64/Debug/: CGame.exe.recipe  vc143.idb
CGame/x64/Debug/CGame.tlog/: CGame.lastbuildstate  CGame.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
CGame/x64/Debug/qt/moc/: moc_CGame.cpp
CGame/x64/Debug/qt/qmake/1303f26d188f46748c0e6b32fcca6225/: props.txt  qtvars.vcxproj  qtvars.xml
CGame/x64/Debug/qt/qmake/4d675d5987c2442eb6af3b7cfd5bdb81/: qtvars.vcxproj  qtvars.xml
CGame/x64/Debug/qt/rcc/: qrc_CGame.cpp
CGame/x64/Debug/qt/uic/: ui_CGame.h
docs/: 项目报告.md
src/: CGame.cpp  CGame.h  CGame.ui  CMakeLists.txt  main.cpp
